Revision history for Perl extension FSA::Rules.

0.21 
      - Added "decorate => 1" attribute to graphs to have lines drawn from
        the edge to its corresponding label. [Curtis Poe]
      - Changed "label_wrap" to "text_wrap" and had it apply to all text.
        [Curtis Poe].
      - Added "Text::Wrap" as a requirement.

0.20  2004-12-24T18:38:57
      - Modified Synopsis to show off the result() method.
      - Other minor documentation fixes spotted by Curtis Poe.
      - Added graph support. [Curtis Poe]
      - Added at() method. [Curtis Poe]
      - Simplified synopsis. [Curtis Poe]
      - Added "state_class" parameter to simplify subclassing FSA::State.
      - A rule defined as a false scalar value, rather than a code reference,
        now works properly.
      - A successful attempt to switch states with the "strict" attribute
        enabled now succeeds if no other rules evaluate to true.
      - Each rule may now take an optional hash reference instead of a code
        or array reference. The hash reference may optionally specify a
        rule label, which eases the tracking of rules and allows graphs to
        generate rule labels. [Curtis Poe]
      - Changed the state() method to curr_state(). The old name has been
        deprecated, will issue a warnning when called, and will be removed in
        a future version.

0.10  2004-12-17T23:29:54
      - Moved state-specific methods to new FSA::State class. This is a
        pretty significant change and can introduce backwards compatibility
        issues, so the version has been bumped up to 0.10.
      - FSA::State objects are now passed to state actions, rather than the
        FSA::Rules object. Call their machine() method to get the FSA::Rules
        object.
      - Switch actions are now passed two arguments: The current FSA::State
        object and the FSA::State object for the new state.
      - Added notes() method for storing arbitrary notes in the FSA::Rules
        object.