@@ -4,7 +4,7 @@
 
 use strict;
 #use Test::More 'no_plan';
-use Test::More tests => 300;
+use Test::More tests => 303;
 
 my $CLASS;
 BEGIN {
@@ -252,9 +252,14 @@ is $fsa->curr_state, $state, "... The current state should be 'bar'";
 is $fsa->{foo_exit}, 1, "... Now the 'foo' exit action should have executed";
 is $fsa->{bar}, 1, "... And the 'bar' code should now have been executed";
 is $fsa->{bar_enter}, 1, "... And the 'bar' enter action should have executed";
+
+can_ok $fsa, 'states';
 my @messages = map { $_->message } $fsa->states('foo');
 is $messages[0], 'some rule label',
   '... and states should have messages automatically added';
+eval {$fsa->states('no_such_state')};
+ok $@, '... but asking for a state that was never defined should die';
+like $@, qr/No such state\(s\) 'no_such_state'/, '... with an appropriate error message';
 
 # Try switch actions.
 ok $fsa = $CLASS->new(
@@ -614,7 +619,6 @@ is $fsa->switch->name, 'foo', "... The switch back to 'foo' should succeed";
 {
     package FSA::Stately;
     @FSA::Stately::ISA = qw(FSA::State);
-
 }
 
 ok $fsa = $CLASS->new( { state_class => 'FSA::Stately'}, foo => {} ),
